# ChangeLog for sys-apps/hal
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.312 2010/01/07 13:28:04 dang Exp $

*hal-0.5.14-r1 (07 Jan 2010)

  07 Jan 2010; Daniel Gryniewicz <dang@gentoo.org> +hal-0.5.14-r1.ebuild:
  Fix MAX_PATH to be the same as the system. Bug #299385


  13 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org> hal-0.5.14.ebuild:
  Fix blockers due to a combination of hal[consolekit,-policykit] and polkit
  pulling in consolekit[policykit] -- bug 296692

  11 Dec 2009; Raúl Porcel <armin76@gentoo.org> hal-0.5.13-r2.ebuild:
  sh stable wrt #287380

  07 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> hal-0.5.13-r2.ebuild:
  amd64 stable wrt #287411

  02 Dec 2009; Daniel Gryniewicz <dang@gentoo.org> +hal-0.5.14.ebuild:
  Bump to 0.5.14

*hal-0.5.14 (02 Dec 2009)

  02 Dec 2009; Daniel Gryniewicz <dang@gentoo.org> +hal-0.5.14.ebuild:
  Bump to 0.5.14

  29 Nov 2009; Joseph Jezak <josejx@gentoo.org> hal-0.5.13-r2.ebuild:
  Marked ppc stable for bug #287380.

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org> hal-0.5.13-r2.ebuild:
  ia64/sparc stable wrt #287380

  23 Nov 2009; Markus Meier <maekke@gentoo.org> hal-0.5.13-r2.ebuild:
  arm stable, bug #287380

  09 Nov 2009; Christian Faulhammer <fauli@gentoo.org> hal-0.5.13-r2.ebuild:
  stable x86, bug 287380

  31 Oct 2009; Brent Baude <ranger@gentoo.org> hal-0.5.13-r2.ebuild:
  Marking hal-0.5.13-r2 ppc64 for bug 287380

  21 Oct 2009; Jeroen Roovers <jer@gentoo.org> hal-0.5.13-r2.ebuild:
  Stable for HPPA (bug #287380).

  03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  hal-0.5.12_rc1-r8.ebuild:
  stable x86, bug 284742

  03 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  hal-0.5.12_rc1-r8.ebuild, hal-0.5.13-r2.ebuild:
  Stable on alpha, bug #287380

  03 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  hal-0.5.12_rc1-r8.ebuild:
  Stable on alpha, bug #284742

*hal-0.5.12_rc1-r8 (30 Sep 2009)
