@@ -1,5 +1,10 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 0.5.10-hald.conf 119 RMD160 06e205ba7fa8acfb6f68e84a247845a3ad028351 SHA1 c8a62a808c7f632154dda1686fe344a4a136e28f SHA256 b19e6df9c78b6f813405a7cbff20e049714db1a000e6b71ab2eca02d372d58af
 AUX 0.5.10-hald.rc 1187 RMD160 b640dcca1b4c467eb678dfbdc903f26912096ac2 SHA1 a6336ced0ed7af6458ff6d09cfb1a9c411f12a61 SHA256 fc031eb3eb527378dc9fe99c2cab75e229d451093ef89e5f623626c4cd0e1b61
+AUX 0.5.14-hald.conf 119 RMD160 06e205ba7fa8acfb6f68e84a247845a3ad028351 SHA1 c8a62a808c7f632154dda1686fe344a4a136e28f SHA256 b19e6df9c78b6f813405a7cbff20e049714db1a000e6b71ab2eca02d372d58af
+AUX 0.5.14-hald.rc 1174 RMD160 e9371f69f6594cf53de234e443a204c2b2127d31 SHA1 35ff148aec2d457cdeaed7e2032a414315a7236b SHA256 0ba01941ed8b7946524fb7ba4253c3ae57c6bdf9ddb4eaa01bd9bd89d1d4ef21
 AUX hal-unmount.dev 397 RMD160 78286dd9527bbb421082e73b0d08e06cd514d275 SHA1 31169a28448fb1eb1dfee5d1699de9a02449a6b7 SHA256 747a4c483f8a558f2c75666e9547e539475f112363f1dbfc6ea19ca393c8e89b
 DIST hal-0.5.11-gentoo-patches-5.tar.bz2 8890 RMD160 ffa1ae251baa8caff74f343f9852a95b800ed9c5 SHA1 7ff6aa207216ac2fdaf1bb4e468c78a2884ef804 SHA256 f03d8f84f97dc3716aebaabc2af43762a8e1a2ffe5acb532915d31ac9794bc21
 DIST hal-0.5.11.tar.bz2 1281251 RMD160 741cfe82f0bc2d67106b24cfe526a754ab36e45f SHA1 1ddb7895d2ddc2464b553ad11f7ba38860478ae9 SHA256 78a2621209b2db4d71f25fe3a7df7b7dd4b5e866e9c699454b78e611def065cf
@@ -10,6 +15,7 @@ DIST hal-0.5.13-gentoo-patches-1.tar.bz2 4049 RMD160 82aa03e2c99a92aadd68f6ada69
 DIST hal-0.5.13.tar.bz2 918835 RMD160 34537d5f8bfb96c52ca066e787282b354179eb8f SHA1 788485fa78b2aa7a9d6b7de537a68ceff1564420 SHA256 d47c9799c18929cffbce5bfa48f35c89657d7f630c6da682f193928697c71ab5
 DIST hal-0.5.14-gentoo-patches-1.tar.bz2 4379 RMD160 ecaec00d31ef2009caf8258c3f406deeaef6816a SHA1 27a849a75a930f344aba4a41f7e724f697fc4d87 SHA256 65d3a42d333f2f5a9392d58b124e9009cc399f9019bfef9237ca9f648f050732
 DIST hal-0.5.14-gentoo-patches-2.tar.bz2 4491 RMD160 d8d4c55210d440b21383d931f76a476032df8e02 SHA1 bceb3836f3a480d6c674c7f8bd324fdaf7d23eec SHA256 0f56bb5ab7684723aea06c315f9df1004200413d6cc6336df0adcb96beb8d37e
+DIST hal-0.5.14-gentoo-patches-3.tar.bz2 4706 RMD160 98b761f78e8f1dda3d533c6921ca530afde85478 SHA1 2fd202df7b4dab55a6f81d90b5660f5a25d0b506 SHA256 d9997ce4890d66bca6611f3e5ee34112a0bdddf0675d4dc13f3268ba9d886a62
 DIST hal-0.5.14.tar.bz2 942954 RMD160 0314dace9512bf49a62bd1556963fc60a6c9caf9 SHA1 a6ec098d78112e18e2773afa5f9ed642b00c4c59 SHA256 c4c5ecc5d50d5d9c061dc06c405461b1f71c12f2c60ed062350b2e6db2f1c51e
 EBUILD hal-0.5.11-r9.ebuild 8893 RMD160 82350f2795c3be604aabd4d67fefbf45b98a742e SHA1 1f47d075d01d759b7bf287ba3f4b4bb8cad19b2d SHA256 af6589feba9fb9395f7d1e23bede156800fe3a870b94750c48c31c6a5572e5e8
 EBUILD hal-0.5.12_rc1-r6.ebuild 9821 RMD160 3861e904a70e10534fbde7af2c2c88f46f154c5d SHA1 c91f15233b0af3fd5661ae66a58646317d9a606e SHA256 f367e528a48ecdf93bd1334299462ec093e8674810b567ceaa9b747f9038b634
@@ -17,6 +23,14 @@ EBUILD hal-0.5.12_rc1-r7.ebuild 9769 RMD160 95a92aa81f15944ef2f10b425933f2dfb541
 EBUILD hal-0.5.12_rc1-r8.ebuild 9668 RMD160 54494d2f817d932db9350595e81a9870870d6809 SHA1 1bf9009c77de925fed98f2817ebe0b5a85260abb SHA256 83a08f6d6827ca290cfaca916119f8be8f7842db965e614114f97aff492b4b6f
 EBUILD hal-0.5.13-r2.ebuild 9793 RMD160 dcd8f938dccd0decc0134a06be9a628ea5c0954e SHA1 c3f8d1beb9ed79d885da59bd97294d4795e42775 SHA256 a35466fa8b1cfee9963fe72aef729a28c3528ee10dd59bf87d3175e033c09757
 EBUILD hal-0.5.14-r1.ebuild 9864 RMD160 1240479f004973aeef8c23677563e618b1f1a56a SHA1 b0b89e2a47593047eb979dafa77b1d1a5b3c4fa3 SHA256 12d35778c646e50ef617864cc77c404b26bf688aa099abcc3bfe307827824851
+EBUILD hal-0.5.14-r2.ebuild 10107 RMD160 03998033552a0a216f3a26bfa5ceb2e69eee6630 SHA1 184cc0295b2823600566c57973c8034a199fa54d SHA256 fcf9b44a37d8d4485b7e553e329980d59cb40c65b08ad02da0d93dfedde8e6a3
 EBUILD hal-0.5.14.ebuild 9865 RMD160 5f2c448e12431680ef3691fc0df49889f45fef1b SHA1 64dcc78ddda9c8a455fa5910203ce8bbfd5a5554 SHA256 9af3aa58cbad6ae47ee67b3da8e205c13c0a0c1113f85c7d0db181f5a587c5a4
-MISC ChangeLog 55393 RMD160 c5bf294d6bffd9c0555d98ea7562442a8943b22a SHA1 e194644fa322dba8aa455d5867bc37b721d97937 SHA256 b31fc0272f97a41435e50c45fe1b70d83f5381a6680129f11303a05bbc8f78d7
+MISC ChangeLog 55687 RMD160 c37f5a43dbbf6c942689ea7608f199694a0cda9a SHA1 0ded81900fe1afe54c3b0272a363b9e1f695c052 SHA256 61bf23e61308e08150e8f8486f46bc722370e6c8789d0e282d8b8403ebe2b031
 MISC metadata.xml 2017 RMD160 90b6fed11f5582fce64fe36354e94b811478d21e SHA1 2b2693c7d677adf363e41e16cc71787fbe01d383 SHA256 910ab10f73ca0bccdea716f39dd3d3cc3d594bd25f6bbb7e25b70082be194048
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAktXCDoACgkQomPajV0RnrGvlgCcCk0xO6rfm8OyUIylQfnJtKG4
+rCgAn3BRU+oSavQ/FLI6eA0kubSIUp4m
+=hfmx
+-----END PGP SIGNATURE-----
