@@ -1,0 +1,6 @@
+# /etc/conf.d/hald
+
+# Should HAL be verbose to syslog? Useful for debugging
+HALD_VERBOSE="no"
+
+# vim: ft=gentoo-conf-d
