@@ -1,0 +1,41 @@
+#!/sbin/runscript
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License, v2 or later
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/files/Attic/0.5.14-hald.rc,v 1.1 2010/01/20 13:42:14 dang Exp $
+
+depend() {
+	use logger acpid
+	need dbus
+	after coldplug dns nscd
+}
+
+start() {
+	[ -z "${HALD_VERBOSE}" ] && HALD_VERBOSE="no"
+	ebegin "Starting Hardware Abstraction Layer daemon"
+
+#	REAL_ROOT=`mount -fv / | cut -d' ' -f1`
+#	TEST_ROOT=`cat /proc/mounts | cut -d' ' -f1 | head -n 2 | tail -n 1`
+
+#	if [ ! -e ${TEST_ROOT} ]; then
+#		echo "You need a ${TEST_ROOT} that points to your ${REAL_ROOT}"
+#		echo "See http://bugs.gentoo.org/show_bug.cgi?id=175243"
+#		echo "Quick fix is: ln -s ${REAL_ROOT} ${TEST_ROOT}"
+#		eend 2
+#	fi
+
+	if [ -f /proc/acpi/event ]; then
+		chgrp haldaemon /proc/acpi/event
+		chmod 440 /proc/acpi/event
+	fi
+
+	[ ${#PATH} -gt 512 ] && export PATH=/usr/libexec:${PATH} #267928
+
+	start-stop-daemon --start -q --exec /usr/sbin/hald -- --use-syslog --verbose=${HALD_VERBOSE}
+	eend $?
+}
+
+stop() {
+	ebegin "Stopping Hardware Abstraction Layer daemon"
+	start-stop-daemon --stop -q --pidfile /var/run/hald.pid 
+	eend $?
+}
