@@ -1,6 +1,15 @@
 # ChangeLog for sys-apps/hal
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.312 2010/01/07 13:28:04 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.313 2010/01/20 13:42:15 dang Exp $
+
+*hal-0.5.14-r2 (20 Jan 2010)
+
+  20 Jan 2010; Daniel Gryniewicz <dang@gentoo.org> +files/0.5.14-hald.conf,
+  +hal-0.5.14-r2.ebuild, +files/0.5.14-hald.rc:
+  Bump to hal-0.5.14-r2; fixes:
+  - bug #299483: need consolekit rather than use it
+  - bug #301192: crash in hald-probe-input on startup
+
 
 *hal-0.5.14-r1 (07 Jan 2010)
 
